fix overflow and hover area on hamburger icon

--- a/src/sass/main/_main.scss
+++ b/src/sass/main/_main.scss
@@ -379,6 +379,10 @@ header {
 	opacity: 0;
 	mix-blend-mode: difference;
 	box-sizing: content-box;
+	display: inline-block;
+	.tcon-menu__lines::before, .tcon-menu__lines::after {
+		transform-origin: 20px;
+	}
 	&:hover {
 		width: 40px;
 		.tcon-menu__lines {
@@ -401,18 +405,21 @@ header {
 			transform: rotate(0deg);
 			transition: opacity;
 		}
-		.tcon-menu__lines::before, .tcon-menu__lines::after  {
+		.tcon-menu__lines::before, .tcon-menu__lines::after {
 			right: auto;
 			left: 0;
 			transform-origin: 20px;
 			transition-delay: 0s;
+			transition-property: transform;
 		}
 	}
 	&.tcon-transform:hover {
 		.tcon-menu__lines::before {
+			transition-property: all;
 			animation: growWidthTconTransfrom .4s cubic-bezier(.08,.82,.17,1) forwards;
 		}
 		.tcon-menu__lines::after {
+			transition-property: all;
 			animation: growWidthTconTransfrom .4s cubic-bezier(.08,.82,.17,1) forwards .2s;
 		}
 	}
